--- a/_posts/2014-04-08-vim技巧.md
+++ b/_posts/2014-04-08-vim技巧.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Sample Post
+title: Vim技巧
 description: "Just about everything you'll need to style in the theme: headings, paragraphs, blockquotes, tables, code blocks, and more."
-modified: 2013-05-31
-tags: [sample post]
+modified: 2014-04-08
+tags: [vim]
 image:
   feature: abstract-3.jpg
 comments: true
@@ -94,8 +94,3 @@ Make any link standout more when applying the `.btn` class.
 <a href="#" class="btn btn-success">Success Button</a>
 {% endhighlight %}
 
-<div markdown="0"><a href="#" class="btn">Primary Button</a></div>
-<div markdown="0"><a href="#" class="btn btn-success">Success Button</a></div>
-<div markdown="0"><a href="#" class="btn btn-warning">Warning Button</a></div>
-<div markdown="0"><a href="#" class="btn btn-danger">Danger Button</a></div>
-<div markdown="0"><a href="#" class="btn btn-info">Info Button</a></div>
