--- a/_posts/2014-06-17-python代码刷接口.md
+++ b/_posts/2014-06-17-python代码刷接口.md
@@ -1,9 +1,10 @@
 ---
 layout: post
 title: python刷web接口
+category:python
 description: "AIO例子"
 modified: 2014-06-18
-tags: [python]
+tags: [python,刷接口]
 image:
   feature: abstract-3.jpg
 comments: true
