edit python post

--- a/_posts/2014-06-17-python中文字符不折行.md
+++ b/_posts/2014-06-17-python中文字符不折行.md
@@ -2,14 +2,16 @@
 layout: post
 title: python刷web接口
 category:python
-description: "AIO例子"
+description: "python中文字符不折行,使用rstrip"
 modified: 2014-06-18
-tags: [python,刷接口]
+tags: [python]
 image:
   feature: abstract-3.jpg
 comments: true
 share: true
 ---
+###pyhon中让中文不折行
+使用rstrip函数
 
 {% highlight python%}
 import os
