--- a/_posts/2014-06-17-python字符串去除折行符号.md
+++ b/_posts/2014-06-17-python字符串去除折行符号.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: python刷web接口
+title: python中字符串去除折行\n
 category:python
 description: "python中文字符不折行,使用rstrip"
 modified: 2014-06-18
@@ -10,7 +10,6 @@ image:
 comments: true
 share: true
 ---
-###pyhon中让中文不折行
 使用rstrip函数
 
 {% highlight python%}
