--- a/_posts/2014-06-18-vim粘贴去除缩进.md
+++ b/_posts/2014-06-18-vim粘贴去除缩进.md
@@ -14,7 +14,7 @@ share: true
 vim在插入模式下，因为在.vimrc文件中设定了smartindent，所以粘贴过来的文本会自动进行缩进，因此，在进行粘贴之前，输入：
 
 {% highlight vim %}
-:set paste
+:set paste S
 {% endhighlight %}
 
 粘贴之后，输入：
